--- a/package.json
+++ b/package.json
@@ -15,22 +15,29 @@
     "@chakra-ui/react": "^2.7.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "framer-motion": "^11.2.10",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
     "@mantine/core": "^7.0.0",
     "@mantine/hooks": "^7.0.0",
     "@tanstack/react-query": "^4.29.0",
-    "aws-sdk": "^2.1564.0"
+    "aws-sdk": "^2.1564.0",
+    "axios": "^1.13.2",
+    "framer-motion": "^11.2.10",
+    "leaflet": "^1.9.4",
+    "polyline": "^0.2.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
-    "webpack": "^5.0.0",
-    "webpack-cli": "^5.0.0",
-    "webpack-dev-server": "^4.0.0",
-    "babel-loader": "^9.0.0",
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "html-webpack-plugin": "^5.5.0"
+    "babel-loader": "^9.0.0",
+    "css-loader": "^6.11.0",
+    "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.0.0",
+    "webpack-cli": "^5.0.0",
+    "webpack-dev-server": "^4.0.0",
+    "prettier": "^3.0.3"
   }
 }
