--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mantine/core": "^7.0.0",
     "@mantine/hooks": "^7.0.0",
     "@tanstack/react-query": "^4.29.0",
+    "antd": "^5.28.0",
     "aws-sdk": "^2.1564.0",
     "axios": "^1.13.2",
     "framer-motion": "^11.2.10",
@@ -34,10 +35,10 @@
     "babel-loader": "^9.0.0",
     "css-loader": "^6.11.0",
     "html-webpack-plugin": "^5.5.0",
+    "prettier": "^3.0.3",
     "style-loader": "^4.0.0",
     "webpack": "^5.0.0",
     "webpack-cli": "^5.0.0",
-    "webpack-dev-server": "^4.0.0",
-    "prettier": "^3.0.3"
+    "webpack-dev-server": "^4.0.0"
   }
 }
